refactor: move adding elements to createdEntities inside createAndPersist()